[project]
name = "dataforge-env"
version = "1.0.0"
description = "OpenEnv environment for data cleaning and reconciliation tasks"
requires-python = ">=3.10"
authors = [
    { name = "Aaryan" }
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "requests>=2.31.0",
    "openai>=1.12.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
